--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "netlify-plugin-pnpm-preinstaller",
+  "name": "@modfy/netlify-plugin-pnpm-preinstaller",
   "version": "0.0.1",
   "description": "Netlify Build plugin - Plugin to install pnpm on netlify",
   "main": "src/index.js",
