✨ Setup npx command

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,1 @@
-name: 'netlify-plugin-pnpm-preinstaller'
-inputs: []
-# Example inputs:
-#  - name: example
-#    description: Example description
-#    default: 5
-#    required: false
+name: pnpm-preinstaller
